--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,5 +3,5 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=gradle-4.5.zip
-#distributionUrl=https\://services.gradle.org/distributions/gradle-4.5.zip
+#distributionUrl=gradle-4.5.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.5.zip
